filtre activité mode + type

--- a/app/Resources/views/activity_mode/index.html.twig
+++ b/app/Resources/views/activity_mode/index.html.twig
@@ -14,7 +14,7 @@
             </div>
             <div class="offset-md-2"></div>
             <div class="col-md-3 col-sm-6">
-                <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_type_activity_new')  }}">Ajouter une activité</a>
+                <a class="btn btn-primary float-right" style="margin-top: 32px" href="{{  path('app_admin_mode_activity_new')  }}">Ajouter un mode d'activité</a>
             </div>
         </div>
         <input type="submit" style="position: absolute; left: -9999px"/>
