--- a/app/Resources/views/course_info/activities/form/remove_activity.html.twig
+++ b/app/Resources/views/course_info/activities/form/remove_activity.html.twig
@@ -1,6 +1,6 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_remove_activity', {'sectionId': courseSection.id, 'courseSectionActivityId': courseSectionActivity.id })}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('course_activities_remove_activity', {'sectionId': courseSection.id, 'courseSectionActivityId': form.vars.data.id })}}) }}
 {{ form_errors(form) }}
-<h5>Êtes-vous sûr(e) de vouloir supprimer l'activité "{{ courseSectionActivity.activity.label }}" ?</h5>
+<h5>Êtes-vous sûr(e) de vouloir supprimer l'activité "{{ form.vars.data.activity.label }}" ?</h5>
 <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-danger rounded mr-2">Supprimer</button>
 </div>
