--- a/app/Resources/views/course_info/activities/view/activity_content.html.twig
+++ b/app/Resources/views/course_info/activities/view/activity_content.html.twig
@@ -19,7 +19,7 @@
                             </dd>
                             <dt>{{ 'app.activities.view.activity.activity_type' | trans }} - {{ 'app.activities.view.activity.activity_mode' | trans }}</dt>
                             <dd>
-                                {{ sectionActivity.activityType.label | lower | trans }} - {{ sectionActivity.activityMode.label | lower | trans }}
+                                {{ sectionActivity.activityType.label }} - {{ sectionActivity.activityMode.label }}
                             </dd>
                         </div>
                         <div class="col-sm">
