--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -25,7 +25,7 @@
             </a>
         </li>
 
-        {% set referentielLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_year', 'app_admin_equipment', 'app_admin_structure'] %}
+        {% set referentielLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity','app_admin_year', 'app_admin_equipment', 'app_admin_structure'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
             <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
                 <i class="nav-icon fas fa-book"></i>
@@ -36,47 +36,6 @@
             </a>
             <ul class="nav nav-treeview"
                 style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
-
-
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_year_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_year']) }}">
-                        <i class="nav-icon fas fa-calendar"></i>
-                        <p>
-                            Années
-                        </p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_period_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_period']) }}">
-                        <i class="nav-icon fas fa-calendar-week"></i>
-                        <p>
-                            Périodes
-                        </p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_language_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_language']) }}">
-                        <i class="fas fa-language nav-icon"></i>
-                        <p>
-                            Langues
-                        </p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_domain_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_domain']) }}">
-                        <i class="fas fa-gem nav-icon"></i>
-                        <p>
-                            Domaines
-                        </p>
-                    </a>
-                </li>
 
                 {% set activityLink = ['app_admin_activity', 'app_admin_type_activity', 'app_admin_mode_activity'] %}
                 <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
@@ -120,21 +79,11 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="{{ path('app_admin_equipment_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_equipment']) }}">
-                        <i class="nav-icon fas fa-drafting-compass"></i>
+                    <a href="{{ path('app_admin_year_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_year']) }}">
+                        <i class="nav-icon fas fa-calendar"></i>
                         <p>
-                            Equipements
-                        </p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a href="{{ path('app_admin_structure_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_structure']) }}">
-                        <i class="nav-icon fas fa-building"></i>
-                        <p>
-                            Structures
+                            Années
                         </p>
                     </a>
                 </li>
@@ -149,6 +98,55 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_domain_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_domain']) }}">
+                        <i class="fas fa-gem nav-icon"></i>
+                        <p>
+                            Domaines
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_equipment_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_equipment']) }}">
+                        <i class="nav-icon fas fa-drafting-compass"></i>
+                        <p>
+                            Equipements
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_language_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_language']) }}">
+                        <i class="fas fa-language nav-icon"></i>
+                        <p>
+                            Langues
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_period_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_period']) }}">
+                        <i class="nav-icon fas fa-calendar-week"></i>
+                        <p>
+                            Périodes
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_structure_index') }}"
+                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin_structure']) }}">
+                        <i class="nav-icon fas fa-building"></i>
+                        <p>
+                            Structures
+                        </p>
+                    </a>
+                </li>
             </ul>
         </li>
 
